# autonomous-drone

./: README.md  pyproject.toml
config/: config.yaml
drone_nav/: __init__.py  config.py  controller.py  gamepad.py  main.py  manual_control.py  mission.py  mqtt_io.py  obstacles.py  phone_imu.py  pid.py  planner.py  servo_map.py  telemetry.py  teleop.py  vane_cmd.py
firmware/drone_esp32/: README.md  platformio.ini
firmware/drone_esp32/src/: main.cpp
samples/: trail_20260601_142659.json
sim_bridge/: __init__.py  blender_sim_mqtt.py  web_bridge.py
tests/: test_controller.py  test_goto_topic.py  test_pid.py  test_planner.py  test_telemetry.py
tools/: __init__.py  servo_test.py  sim_stub.py
webapp/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
webapp/src/: App.tsx  consts.ts  hooks.ts  profiling.ts  store.ts  theme.css  types.ts  vite-env.d.ts
webapp/src/components/: CanvasBoundary.tsx  ComponentMap.tsx  Hud.tsx  ImuView.tsx  LineChart.tsx  Profiling.tsx  SimulationViewport.tsx  Singlecopter.tsx  StaticChart.tsx  TopBar.tsx  Visualizations.tsx
