[project]
name = "drone-nav"
version = "0.1.0"
description = "PID navigation controller for a singlecopter Blender simulation, communicating over MQTT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "paho-mqtt>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
web = [
    "websockets>=12.0",
]

[project.scripts]
drone-nav = "drone_nav.main:main"
web-bridge = "sim_bridge.web_bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["drone_nav", "sim_bridge", "tools"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
